--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react": "16.9.0",
     "react-dom": "16.9.0",
     "react-firebaseui": "^4.0.0",
-    "reactfire": "^2.0.0"
+    "reactfire": "^2.0.0-alpha.3"
   },
   "scripts": {
     "start": "react-scripts start",
